[gd_scene load_steps=4 format=3 uid="uid://bu7nd4cflfoby"]

[ext_resource type="Texture2D" uid="uid://c4sxnaisqtbm" path="res://images/ship.png" id="1_3e3tb"]
[ext_resource type="Script" path="res://ship.gd" id="1_ipio3"]

[sub_resource type="CircleShape2D" id="CircleShape2D_u042g"]
radius = 16.0

[node name="Ship" type="CharacterBody2D" groups=["ships"]]
collision_layer = 2
collision_mask = 3
motion_mode = 1
wall_min_slide_angle = 0.0
safe_margin = 10.0
script = ExtResource("1_ipio3")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.09, 0.09)
texture = ExtResource("1_3e3tb")
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_u042g")
debug_color = Color(0, 0.592157, 0.74902, 0.419608)

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_max_distance = 200.0

[node name="LightUpTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="CrashedTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[connection signal="timeout" from="LightUpTimer" to="." method="_on_light_up_timer_timeout"]
[connection signal="timeout" from="CrashedTimer" to="." method="_on_crashed_timer_timeout"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
